--- a/languages.tex
+++ b/languages.tex
@@ -33,14 +33,20 @@
 \definecolor{isarblue}{HTML}{006699}
 \definecolor{isargreen}{HTML}{009966}
 \definecolor{isarred}{HTML}{cc0000}
+\definecolor{isarpurple}{HTML}{9966ff}
+\definecolor{isarlightred}{HTML}{ff5050}
 \lstdefinelanguage{isabelle}{
-    keywords=[1]{record,type_synonym,datatype,fun,abbreviation,definition,proof,lemma,theorem,theory,corollary,apply,done,by,env,sta,reduce,warnings,payments,newstate,inputList,reduced,tra,trec,function,termination,contractLoop,handleChoose,handleDeposit},
+    keywords=[1]{abbreviation,by,contractLoop,corollary,datatype,definition,done,env,evalBoudnAuction,fun,function,goal,handleChoose,handleDeposit,inputList,lemma,newstate,payments,proof,record,reduce,reduced,sta,termination,theorem,theory,tra,trec,type_synonym,using,warnings},
     morecomment=[s]{(*}{*)}, % chktex 9
     keywordstyle=[1]\bfseries\color{isarblue},
-    keywords=[2]{where,assumes,shows,and,imports,begin,end,a,applyWarn,newState,cont},
+    keywords=[2]{a,and,applyWarn,assumes,begin,cont,end,imports,newState,p,ps,shows,where},
     keywordstyle=[2]\bfseries\color{isargreen},
-    keywords=[3]{if,then,else,of,SOME,let,in,O},
+    keywords=[3]{O,SOME,else,if,in,let,of,then},
     keywordstyle=[3]\color{isarblue},
+    keywords=[4]{add,del,only},
+    keywordstyle=[4]\color{isarpurple},
+    keywords=[5]{apply},
+    keywordstyle=[5]\color{isarlightred},
     commentstyle=\color{isarred}
 }
 \lstdefinestyle{Isabelle}{
