--- a/main.tex
+++ b/main.tex
@@ -2582,9 +2582,24 @@ En esta sección detallaremos el trabajo realizado para probar la ausencia de \t
 
 \subsection{El contrato \textit{Auction}}
 
-El mismo se encuentra escrito en Haskell~\cite{auction_haskell}, y forma parte de los ejemplos del \textit{Playground}:
+Una subasta o remate (\textit{Auction}) es una venta organizada basada en la competencia directa, es decir, a aquel comprador (postor) que pague la mayor cantidad de dinero o de bienes a cambio del producto. El bien subastado se adjudica al postor que más dinero haya ofrecido por él.
 
-% TODO: Armar algun diagrama de secuencia y explicar didacticamente la idea de Auction en general
+Tradicionalmente en la teoría se reconocen dos grandes tipos: la subasta en sobre cerrado (que pueden ser de primer precio o de segundo precio) y la subasta dinámica, que puede ser subasta ascendente (inglesa), descendente (holandesa), o de `todos pagan' (subasta americana). En este caso se modela una subasta dinámica de tipo ascendente.
+
+En una subasta basada en una \textit{blockchain}, cada postor debe declarar el dinero primero para convertirse en el mejor postor. Los mismos recuperan su dinero cuando se los supera.
+
+Se puede ver en el siguiente diagrama de secuencia, el comportamiento esperado por la subasta:
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{Auction.png}
+    \caption{Diagrama de secuencia del contrato \textit{Auction}.}\label{fig:Auction}
+\end{figure}
+
+Con el fin de mantener la claridad del diagrama. No se muestran casos donde las ofertas son menores a \textit{minBid} o mayores a \textit{maxBid}, las cuales deben ser rechazadas. Tampoco casos en los que se oferta menos del valor actual del líder, en los cuales se devuelve el deposito automáticamente y se mantiene el líder y valor actual.
+
+
+Con respecto a la implementación de IOHK, el mismo se encuentra escrito en Haskell~\cite{auction_haskell}, y forma parte de los ejemplos del \textit{Playground}:
 
 \begin{lstlisting}[style=Haskell-cardano, caption=Contrato \textit{Auction} escrito en Marlowe]
 {-# LANGUAGE OverloadedStrings #-}
